[package]
name = "flock-xmss"
version = "0.1.0"
edition = "2021"
description = "XMSS hash-based signature aggregation prover over standard hashes (SHA-256, BLAKE3), built on Flock"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
# Flock fork with the slot-aligned blake3 layout (upstream PR pending);
# sha2 side identical to upstream 4af7a4d.
flock-prover = { git = "https://github.com/gopikannappan/flock", rev = "16e4ca7320b9104d0a4f5321b55040bd0bcc9d6a" }

[profile.release]
lto = "thin"
codegen-units = 1
